ChangeLog
=========

https://github.com/eraserhd/parinfer-rust/compare/v0.4.3...HEAD[Unreleased]
---------------------------------------------------------------------------

=== Added

* The user can now set the character used to denote comments. The
  character can be set on a global or per-buffer basis (using
  `g:parinfer_comment_char` and `b:parinfer_comment_char` respectively).
  By default, the global character is `;` and the character for Janet
  buffers is `#`.
* Add support for Janet's long strings.
* Support for WebAssembly
* More support for Common Lisp and Scheme:
  - `|Enclosed symbols|`
  - `#|Block comments|#`
  - `#;(S-expression comments)`

https://github.com/eraserhd/parinfer-rust/compare/v0.4.2...v0.4.3[0.4.3]
------------------------------------------------------------------------

=== Fixed

* Sometimes dlerror() is null on second invocation, causing SEGV instead
  of an informative panic.
* Fix for rust+glibc 2.30 test failures: self-reference code no longer
  works in test because glibc 2.30 refuses to load position-independent
  code or no-library code, so it is disabled.

https://github.com/eraserhd/parinfer-rust/compare/v0.4.1...v0.4.2[0.4.2]
------------------------------------------------------------------------

=== Fixed

* Errors in build and release actions.


https://github.com/eraserhd/parinfer-rust/compare/v0.4.0...v0.4.1[0.4.1]
------------------------------------------------------------------------

=== Fixed

* Test error "Could not get parinfer library path" (#57).

=== Vim

* Add support for loading with Vim/Neovim `packadd`
* Add support for [Fennel](https://fennel-lang.org)
* Add support for [Janet](https://janet-lang.org)

=== Kakoune

* Prevent Unicode characters from "locking up" the cursor.  Closes #55.
  (This requires a version of Kakoune dated Nov 12, 2019 or later, with the
  `-display-column` option to `:select`.)

https://github.com/eraserhd/parinfer-rust/compare/v0.3.1...v0.4.0[0.4.0]